Fix. RealUserBadge. Fixed layout on mobile.

--- a/css/src/cleantalk-public.css
+++ b/css/src/cleantalk-public.css
@@ -48,8 +48,8 @@
 
 .apbct-real-user-popup {
     display: none;
-    width: 450px;
     position: absolute;
+    width: 200px;
     top: 30px;
     left: 0;
     padding: 10px;
@@ -61,8 +61,14 @@
     z-index: 1000;
     cursor: default;
 }
-.apbct-real-user-title {
-    width: 450px;
+
+@media (min-width: 768px) {
+    .apbct-real-user-popup {
+        width: 450px;
+    }
+    .apbct-real-user-title {
+        width: 450px;
+    }
 }
 
 #honeypot-field-url {
